# 声明cmake最低版本
cmake_minimum_required(VERSION 2.8)
project(3DReconstruction)
include_directories("/usr/include/eigen3")
find_package(OpenCV REQUIRED)
find_package(Pangolin REQUIRED)
add_executable(s3dreconstruction_SIFT s3dreconstruction_SIFT.cpp)
add_executable(s3dsparse_reconstruction s3dsparse_reconstruction.cpp)
add_executable(singlereconstruction singlereconstruction.cpp)
add_executable(multiviewreconstruction multiviewreconstruction.cpp)
# 链接OpenCV库
target_link_libraries(s3dreconstruction_SIFT ${OpenCV_LIBS})
target_link_libraries(s3dreconstruction_SIFT ${Pangolin_LIBRARIES})
target_link_libraries(s3dsparse_reconstruction ${OpenCV_LIBS})
target_link_libraries(s3dsparse_reconstruction ${Pangolin_LIBRARIES})
target_link_libraries(singlereconstruction ${OpenCV_LIBS})
target_link_libraries(singlereconstruction ${Pangolin_LIBRARIES})
target_link_libraries(multiviewreconstruction ${OpenCV_LIBS})
target_link_libraries(multiviewreconstruction ${Pangolin_LIBRARIES})
